@@ -29,6 +29,7 @@
 #include <asterisk/frame.h>
 #include <asterisk/cli.h>
 #include <asterisk/stringfields.h>
+#include <asterisk/manager.h>
 
 /*! \brief capabilities for res_fax to locate a fax technology module */
 enum ast_fax_capabilities {
@@ -255,6 +256,9 @@ struct ast_fax_tech {
 	char * (* const cli_show_capabilities)(int);
 	/*! displays details about the fax session */
 	char * (* const cli_show_session)(struct ast_fax_session *, int);
+	/*! Generates manager event detailing the fax session */
+	void (* const manager_fax_session)(struct mansession *,
+		const char *, struct ast_fax_session *);
 	/*! displays statistics from the fax technology module */
 	char * (* const cli_show_stats)(int);
 	/*! displays settings from the fax technology module */
@@ -275,6 +279,9 @@ unsigned int ast_fax_maxrate(void);
 
 /*! \brief convert an ast_fax_state to a string */
 const char *ast_fax_state_to_str(enum ast_fax_state state);
+
+/*! \brief get string representation of a FAX session's operation */
+const char *ast_fax_session_operation_str(struct ast_fax_session *s);
 
 /*!
  * \brief Log message at FAX or recommended level
